{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 434,
  "lineage": "60e4b00d-fca1-ff3a-0dff-e844ab59beb8",
  "resources": [
    {
      "module": "module.ilios_eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600859306:security-group/sg-0479b2abdcefcb9a4",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0479b2abdcefcb9a4",
            "ingress": [],
            "name": "test-cluster-cluster-20250306201613299300000006",
            "name_prefix": "test-cluster-cluster-",
            "owner_id": "571600859306",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-cluster-cluster"
            },
            "tags_all": {
              "Name": "test-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-049eeba9fae3f6bde"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ilios_eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600859306:security-group/sg-061a27a2ab1e6c25d",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-061a27a2ab1e6c25d",
            "ingress": [],
            "name": "test-cluster-node-20250306201613803500000007",
            "name_prefix": "test-cluster-node-",
            "owner_id": "571600859306",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-cluster-node",
              "kubernetes.io/cluster/test-cluster": "owned"
            },
            "tags_all": {
              "Name": "test-cluster-node",
              "kubernetes.io/cluster/test-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-049eeba9fae3f6bde"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ilios_eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-731756508",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0479b2abdcefcb9a4",
            "security_group_rule_id": "sgr-0c60ca22bd4f3bdb8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ilios_eks_cluster.module.eks.aws_security_group.cluster",
            "module.ilios_eks_cluster.module.eks.aws_security_group.node",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1838310429",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0479b2abdcefcb9a4",
            "security_group_rule_id": "sgr-000d9e5d9c4a4c6c2",
            "self": false,
            "source_security_group_id": "sg-061a27a2ab1e6c25d",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ilios_eks_cluster.module.eks.aws_security_group.cluster",
            "module.ilios_eks_cluster.module.eks.aws_security_group.node",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2184612603",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0479b2abdcefcb9a4",
            "security_group_rule_id": "sgr-05b0a8be58880c92d",
            "self": false,
            "source_security_group_id": "sg-061a27a2ab1e6c25d",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ilios_eks_cluster.module.eks.aws_security_group.cluster",
            "module.ilios_eks_cluster.module.eks.aws_security_group.node",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_http",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP access",
            "from_port": 80,
            "id": "sgrule-1481264590",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0479b2abdcefcb9a4",
            "security_group_rule_id": "sgr-0d65894c43bec0af5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ilios_eks_cluster.module.eks.aws_security_group.cluster",
            "module.ilios_eks_cluster.module.eks.aws_security_group.node",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1115605104",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0479b2abdcefcb9a4",
            "security_group_rule_id": "sgr-0c4824e2d9433a67e",
            "self": false,
            "source_security_group_id": "sg-061a27a2ab1e6c25d",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ilios_eks_cluster.module.eks.aws_security_group.cluster",
            "module.ilios_eks_cluster.module.eks.aws_security_group.node",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ilios_eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1620583542",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-061a27a2ab1e6c25d",
            "security_group_rule_id": "sgr-002f43e757ea20496",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ilios_eks_cluster.module.eks.aws_security_group.cluster",
            "module.ilios_eks_cluster.module.eks.aws_security_group.node",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2708268525",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-061a27a2ab1e6c25d",
            "security_group_rule_id": "sgr-0f59e936be77575b2",
            "self": false,
            "source_security_group_id": "sg-0479b2abdcefcb9a4",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ilios_eks_cluster.module.eks.aws_security_group.cluster",
            "module.ilios_eks_cluster.module.eks.aws_security_group.node",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-239389537",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-061a27a2ab1e6c25d",
            "security_group_rule_id": "sgr-093d6d346f45c158d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ilios_eks_cluster.module.eks.aws_security_group.cluster",
            "module.ilios_eks_cluster.module.eks.aws_security_group.node",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-3516593791",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-061a27a2ab1e6c25d",
            "security_group_rule_id": "sgr-0cd0a5ad3a5e63275",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ilios_eks_cluster.module.eks.aws_security_group.cluster",
            "module.ilios_eks_cluster.module.eks.aws_security_group.node",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-2936329074",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-061a27a2ab1e6c25d",
            "security_group_rule_id": "sgr-0a41c6a36d15b8298",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ilios_eks_cluster.module.eks.aws_security_group.cluster",
            "module.ilios_eks_cluster.module.eks.aws_security_group.node",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3120941388",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-061a27a2ab1e6c25d",
            "security_group_rule_id": "sgr-0c77d80689e357240",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ilios_eks_cluster.module.eks.aws_security_group.cluster",
            "module.ilios_eks_cluster.module.eks.aws_security_group.node",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-878857002",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-061a27a2ab1e6c25d",
            "security_group_rule_id": "sgr-0cb0136eb44ef0355",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ilios_eks_cluster.module.eks.aws_security_group.cluster",
            "module.ilios_eks_cluster.module.eks.aws_security_group.node",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-702433212",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-061a27a2ab1e6c25d",
            "security_group_rule_id": "sgr-0b82170b36c007d1a",
            "self": false,
            "source_security_group_id": "sg-0479b2abdcefcb9a4",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ilios_eks_cluster.module.eks.aws_security_group.cluster",
            "module.ilios_eks_cluster.module.eks.aws_security_group.node",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-940774556",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-061a27a2ab1e6c25d",
            "security_group_rule_id": "sgr-0f3dd7bc46a5a47bc",
            "self": false,
            "source_security_group_id": "sg-0479b2abdcefcb9a4",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ilios_eks_cluster.module.eks.aws_security_group.cluster",
            "module.ilios_eks_cluster.module.eks.aws_security_group.node",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_http",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP access",
            "from_port": 80,
            "id": "sgrule-3255378624",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-061a27a2ab1e6c25d",
            "security_group_rule_id": "sgr-0c825e5e082fd1fc3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ilios_eks_cluster.module.eks.aws_security_group.cluster",
            "module.ilios_eks_cluster.module.eks.aws_security_group.node",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1589984959",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-061a27a2ab1e6c25d",
            "security_group_rule_id": "sgr-0e5e2fd481d390922",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ilios_eks_cluster.module.eks.aws_security_group.cluster",
            "module.ilios_eks_cluster.module.eks.aws_security_group.node",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-4204436816",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-061a27a2ab1e6c25d",
            "security_group_rule_id": "sgr-01e4e4b263e04ecfe",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ilios_eks_cluster.module.eks.aws_security_group.cluster",
            "module.ilios_eks_cluster.module.eks.aws_security_group.node",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_ssh",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH access",
            "from_port": 22,
            "id": "sgrule-1954774901",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-061a27a2ab1e6c25d",
            "security_group_rule_id": "sgr-0bcccc138edb98cd9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ilios_eks_cluster.module.eks.aws_security_group.cluster",
            "module.ilios_eks_cluster.module.eks.aws_security_group.node",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ilios_eks_cluster.module.eks.module.eks_managed_node_group[\"main\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600859306:security-group/sg-0d4a1f88f76d65a0a",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-0d4a1f88f76d65a0a",
            "ingress": [],
            "name": "test-node-group-eks-node-group-20250306201614039300000008",
            "name_prefix": "test-node-group-eks-node-group-",
            "owner_id": "571600859306",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-node-group-eks-node-group"
            },
            "tags_all": {
              "Name": "test-node-group-eks-node-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-049eeba9fae3f6bde"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ilios_vpc.aws_subnet.ilios_private",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ilios_lb",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ilios_alb_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ace34e9f53c91c5d",
            "arn": "arn:aws:ec2:us-east-1:571600859306:instance/i-0b2b137fbe1a9ce91",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b2b137fbe1a9ce91",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0850afcb4d7a68949",
            "private_dns": "ip-10-0-1-171.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.171",
            "public_ip": "18.207.164.192",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0882703aae66b5803",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01318918a6a4686ef",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b1378ce4f4fb9fdf"
            ]
          },
          "dependencies": [
            "module.ilios_lb.aws_security_group.lb_sg",
            "module.ilios_lb.data.aws_ami.latest_amazon_linux",
            "module.ilios_vpc.aws_subnet.ilios_public",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ilios_lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ilios_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:571600859306:loadbalancer/app/test-lb/29873b33ed16f084",
            "arn_suffix": "app/test-lb/29873b33ed16f084",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-lb-925324853.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:571600859306:loadbalancer/app/test-lb/29873b33ed16f084",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b1378ce4f4fb9fdf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01318918a6a4686ef"
              },
              {
                "subnet_id": "subnet-041575a978b598341"
              }
            ],
            "subnets": [
              "subnet-01318918a6a4686ef",
              "subnet-041575a978b598341"
            ],
            "vpc_id": "vpc-049eeba9fae3f6bde",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ilios_lb.aws_security_group.lb_sg",
            "module.ilios_vpc.aws_subnet.ilios_public",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ilios_lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ilios_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:571600859306:listener/app/test-lb/29873b33ed16f084/734711cfe04d62fd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:571600859306:targetgroup/test-target-group/7e8436338875bf7d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:571600859306:listener/app/test-lb/29873b33ed16f084/734711cfe04d62fd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:571600859306:loadbalancer/app/test-lb/29873b33ed16f084",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ilios_lb.aws_lb.ilios_alb",
            "module.ilios_lb.aws_lb_target_group.ilios_alb_tg",
            "module.ilios_lb.aws_security_group.lb_sg",
            "module.ilios_vpc.aws_subnet.ilios_public",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ilios_lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ilios_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:571600859306:targetgroup/test-target-group/7e8436338875bf7d",
            "arn_suffix": "targetgroup/test-target-group/7e8436338875bf7d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:571600859306:targetgroup/test-target-group/7e8436338875bf7d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "test-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-049eeba9fae3f6bde"
          },
          "dependencies": [
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ilios_lb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ilios_alb_tga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:571600859306:targetgroup/test-target-group/7e8436338875bf7d-2025030620164197380000000f",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:571600859306:targetgroup/test-target-group/7e8436338875bf7d",
            "target_id": "i-0b2b137fbe1a9ce91"
          },
          "dependencies": [
            "module.ilios_lb.aws_instance.ilios_alb_instance",
            "module.ilios_lb.aws_lb_target_group.ilios_alb_tg",
            "module.ilios_lb.aws_security_group.lb_sg",
            "module.ilios_lb.data.aws_ami.latest_amazon_linux",
            "module.ilios_vpc.aws_subnet.ilios_public",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ilios_lb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600859306:security-group/sg-0b1378ce4f4fb9fdf",
            "description": "Allow HTTP inbound traffic",
            "egress": [],
            "id": "sg-0b1378ce4f4fb9fdf",
            "ingress": [],
            "name": "ilios-lb-sg",
            "name_prefix": "",
            "owner_id": "571600859306",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-049eeba9fae3f6bde"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ilios_lb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb_sg_rule_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3407231852",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b1378ce4f4fb9fdf",
            "security_group_rule_id": "sgr-082098e47e592d4d2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ilios_lb.aws_security_group.lb_sg",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ilios_lb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb_sg_rule_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2619042769",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b1378ce4f4fb9fdf",
            "security_group_rule_id": "sgr-017d1bbe84176c7dc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ilios_lb.aws_security_group.lb_sg",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ilios_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ilios_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c11855b935da4914",
            "arn": "arn:aws:ec2:us-east-1:571600859306:elastic-ip/eipalloc-0c11855b935da4914",
            "domain": "vpc",
            "id": "eipalloc-0c11855b935da4914",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-164-223-228.compute-1.amazonaws.com",
            "public_ip": "54.164.223.228",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ilios_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ilios_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600859306:internet-gateway/igw-0b26e9c2b094a8dd9",
            "id": "igw-0b26e9c2b094a8dd9",
            "owner_id": "571600859306",
            "tags": {
              "Name": "ilios-igw"
            },
            "tags_all": {
              "Name": "ilios-igw"
            },
            "vpc_id": "vpc-049eeba9fae3f6bde"
          },
          "dependencies": [
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ilios_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ilios_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c11855b935da4914",
            "association_id": "eipassoc-0bd0d975457dd374b",
            "connectivity_type": "public",
            "id": "nat-02435deac15579a15",
            "network_interface_id": "eni-0ceb17e798bf519e3",
            "private_ip": "10.0.1.11",
            "public_ip": "54.164.223.228",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01318918a6a4686ef",
            "tags": {
              "Name": "ilios-nat-gw"
            },
            "tags_all": {
              "Name": "ilios-nat-gw"
            }
          },
          "dependencies": [
            "module.ilios_vpc.aws_eip.ilios_eip",
            "module.ilios_vpc.aws_internet_gateway.ilios_igw",
            "module.ilios_vpc.aws_subnet.ilios_public",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ilios_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "ilios_private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c1bd203f2c8084331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02435deac15579a15",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c1bd203f2c808433",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ilios_vpc.aws_eip.ilios_eip",
            "module.ilios_vpc.aws_internet_gateway.ilios_igw",
            "module.ilios_vpc.aws_nat_gateway.ilios_nat_gw",
            "module.ilios_vpc.aws_route_table.ilios_private_rt",
            "module.ilios_vpc.aws_subnet.ilios_public",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ilios_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "ilios_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b26e9c2b094a8dd9",
            "id": "r-rtb-05e400a321ce4f2b51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05e400a321ce4f2b5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ilios_vpc.aws_internet_gateway.ilios_igw",
            "module.ilios_vpc.aws_route_table.ilios_public_rt",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ilios_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ilios_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600859306:route-table/rtb-0c1bd203f2c808433",
            "id": "rtb-0c1bd203f2c808433",
            "owner_id": "571600859306",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ilios-private-rt"
            },
            "tags_all": {
              "Name": "ilios-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-049eeba9fae3f6bde"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ilios_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ilios_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600859306:route-table/rtb-05e400a321ce4f2b5",
            "id": "rtb-05e400a321ce4f2b5",
            "owner_id": "571600859306",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ilios-public-rt"
            },
            "tags_all": {
              "Name": "ilios-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-049eeba9fae3f6bde"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ilios_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ilios_private_sa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0940cff8504c10d7d",
            "route_table_id": "rtb-0c1bd203f2c808433",
            "subnet_id": "subnet-0f48a4d464601de99"
          },
          "dependencies": [
            "module.ilios_vpc.aws_route_table.ilios_private_rt",
            "module.ilios_vpc.aws_subnet.ilios_private",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1172d36162b38a8",
            "route_table_id": "rtb-0c1bd203f2c808433",
            "subnet_id": "subnet-0403e7e3af5efb9b1"
          },
          "dependencies": [
            "module.ilios_vpc.aws_route_table.ilios_private_rt",
            "module.ilios_vpc.aws_subnet.ilios_private",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ilios_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ilios_public_sa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b14fcd30d7dce1a6",
            "route_table_id": "rtb-05e400a321ce4f2b5",
            "subnet_id": "subnet-01318918a6a4686ef"
          },
          "dependencies": [
            "module.ilios_vpc.aws_route_table.ilios_public_rt",
            "module.ilios_vpc.aws_subnet.ilios_public",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ada743a61a055442",
            "route_table_id": "rtb-05e400a321ce4f2b5",
            "subnet_id": "subnet-041575a978b598341"
          },
          "dependencies": [
            "module.ilios_vpc.aws_route_table.ilios_public_rt",
            "module.ilios_vpc.aws_subnet.ilios_public",
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ilios_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ilios_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600859306:subnet/subnet-0f48a4d464601de99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f48a4d464601de99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "571600859306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-049eeba9fae3f6bde"
          },
          "dependencies": [
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600859306:subnet/subnet-0403e7e3af5efb9b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0403e7e3af5efb9b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "571600859306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-049eeba9fae3f6bde"
          },
          "dependencies": [
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ilios_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ilios_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600859306:subnet/subnet-01318918a6a4686ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01318918a6a4686ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "571600859306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-049eeba9fae3f6bde"
          },
          "dependencies": [
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600859306:subnet/subnet-041575a978b598341",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041575a978b598341",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "571600859306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-049eeba9fae3f6bde"
          },
          "dependencies": [
            "module.ilios_vpc.aws_vpc.ilios_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ilios_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ilios_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600859306:vpc/vpc-049eeba9fae3f6bde",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-085a6a1966c4d9823",
            "default_route_table_id": "rtb-039256536eb9beefe",
            "default_security_group_id": "sg-08b9d51ae61680c66",
            "dhcp_options_id": "dopt-0de5d610c795d94b4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-049eeba9fae3f6bde",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-039256536eb9beefe",
            "owner_id": "571600859306",
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}